task1: complete module

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,4 +1,5 @@
-obj-m += phonebook.o phonebook_store.o
+obj-m += phonebook.o
+phonebook-objs += phonebook_device.o phonebook_store.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
